# MiniProject-Flask-Backend

AQI versus Temperature/: IndianWeatherRepository.csv
backend-flask/: app.py  pyproject.toml
backend-flask/health-impact-class/: HealthImpactClassmodel.pkl  HealthImpactscaler.pkl  health-impact-model.py
backend-flask/model/: scaler.pkl  train_model.py
