[tool.poetry]
name = "MiniProject-Flask-Backend"
version = "0.1.0"
description = "Flask backend with ML model for AirVana"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
pandas = "^2.2.2"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
matplotlib = "^3.8.4"
joblib = "^1.4.2"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
